# RepositorioDeAulas

./: alocacao.html  atividade_reforco.html  beta_ide.html  minigame.html  roleta.html  settings.json
.github/workflows/: main.yml
backend/: API.md  Cargo.toml
backend/database/data/: data.mdb  lock.mdb
backend/src/: main.rs  routes.rs
backend/src/database/: bd.md  database.rs  init.rs  models.rs
frontend/: admin.html  aluno.html  index.html  login.html  professor.html
frontend/componentes/: alert-modals.html  alert-modals.js
frontend/global/: api-utils.js  global.css
turmas/estatistica/atividades/: covariancia_correlacao_linear.html  probabilidade_e_ou.html  quartis_percentis.html  teste_z.html
turmas/estatistica/aulas/: covariancia_correlacao_linear.md  probabilidade_e_ou.md  quartis_percentis.md  teste_z.md  trabalho_final.md
turmas/logica/atividades/: tipos_compostos_arquivos.html
turmas/logica/aulas/: arquivos_e_blibioteca.md  tipos_compostos_estrutura_dados.md
turmas/sistemas_aplicados/: dor_historia_usuario.md
turmas/sistemas_aplicados/aulas/: SDLC_fase_3.md  SDLC_fase_4.md  apis.md  dicionario_git.md  fundamentos_engenharia _software.md  trabalho_final.md  versionamento.md
turmas/terceirao/atividades/: atividade_extra.html
turmas/terceirao/aulas/: hackathon.md  resumao.md
turmas/visualizacao_dados/atividades/: matplotlib02.html
turmas/visualizacao_dados/aulas/: csv.md  matplotlib.md  trabalho_final.md
