[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "tokio1", "smtp-transport", "serde", "tokio1-native-tls"] }
dotenvy = "0.15"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1"

# Banco de dados LMDB
lmdb = "0.8"

# HTTP client para inicialização
reqwest = { version = "0.11", features = ["json"] }

# UUID para gerar IDs únicos
uuid = { version = "1.0", features = ["v4"] }

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Hash de senhas
argon2 = "0.5"
password-hash = "0.5"

# Async channel / concurrency (já parte do tokio)
# usamos tokio::sync::mpsc

# (opcional) se você quiser integrar com Kafka/RabbitMQ no futuro
# rdkafka = { version = "0.30", optional = true }

[features]
default = []
